test/fail/Issue623.agda
open import Issue623.B
